# Wavpy-simulator

./: README.md
Source_{ICC_sincos_SIMD_version}/: SurfaceGeneration.cpp  SurfacePlot.hpp  SurfaceReflection.cpp  main.cpp  script.txt  script_mpi.txt
Source_{taylor_sincos_version}/: SurfaceReflection.cpp  SurfaceReflection.hpp  script.txt  script_mpi.txt
icc_compiled/: SurfaceReflection.cpp  SurfaceReflection.hpp  SurfaceReflection.out  a.out  main.cpp
icc_compiled/check_hpp/: FFT_v2.cpp  SurfaceGeneration.cpp  SurfaceGeneration.hpp  a.out  global_main.cpp  main-linked-sincos  main-linked-taylor  test.c
test_taylor/: a.out  test_sine.cpp
w/: .gitlab-ci.yml  COPYING.md  ChangeLog.md  INSTALL.md  NEWS.md
w/.gitlab/issue_templates/: Bug.md  Documentation.md
w/SIM_2021/: main.cpp  main.out  main3.out  mainc.out  perf.data  perf.data.old
w/SIM_2021/Result/: SurfaceReflection.cpp  SurfaceReflection.hpp  main_surface_generation.cpp
w/SIM_2021/matplotlib-cpp-master/examples/fft/: FFT_v2.cpp
w/boostpython/: ReferenceFrame_boostpython.cpp  ctor_boostpython.cpp  ndarray_gsl.cpp
w/docker/: Dockerfile-ubuntu-18.04  Dockerfile-ubuntu-20.04
w/docs/: Doxyfile.in  Welcome.md
w/docs/doxygen/other/: main_page.dox
w/examples/: .gitignore  ComputeSPIR_realdataAutocorr.cc  GenerateSPIR_dataset.cc  ProcessDELTEBRE_phase.cc  ProcessTIGRIS_GOLD.cc  ProcessTIGRIS_PIR.cc  ProcessTIGRISfreq_GOLD.cc  Visibility_GNSS.cc  Visibility_track_GNSS.cc  example_geometry_class.cc  example_surface_class.cc
w/octave_prototypes/: elfouhaily_spectrum.m  makefile_test  math_func.inc  prova.m  seasurfaceFFTphase.f90
w/prova/: CMakeLists.txt  plotsomething.cpp  prova.cpp
w/src/: CMakeLists.txt  ComplexSignal.cpp  DigitalSignalProcessor.cpp  Observable.cpp  ObservableProcessor.cpp  Receiver.cpp  Retrieval.cpp  Scatterer.cpp  Scenario.cpp  Transmitter.cpp  ctor2.cpp
w/src/inc/: ComplexWaveform.hpp  DigitalSignalProcessor.hpp  Plots.hpp  RawData.hpp  Receiver.hpp  Retrieval.hpp  Scatterer.hpp  SourceType.hpp  Transmitter.hpp  ctor2.hpp
w/src_old/: .gitignore  Surface_routines.f90  ZavorotnyVoronovichModel.cc  ancillary_functions.cc  compute_delays_wav.cc  gnss_composite.cc  reflecting_surface.cc  rf_front_end.cc  specular_geometry.cc
w/src_old/data_share/: GEOHALO_sample.WAVINTGEO  GEOHALO_sample.WAVINTGEO.nc  GPS_L1_PRN02.txt  GPS_L1_PRN11.txt  GPS_L1_PRN13.txt  GPS_L1_PRN14.txt  GPS_L1_PRN16.txt  GPS_L1_PRN17.txt  GPS_L1_PRN20.txt  GPS_L1_PRN23.txt  GPS_L1_PRN26.txt  GPS_L1_PRN27.txt  GPS_L1_PRN29.txt  GPS_L1_PRN30.txt  GPS_L1_PRN32.txt  Greenland_sample.WAV.nc
w/src_old/inc/: gnss_composite.h  rf_front_end.h  specular_geometry.h  wavpy_global_variables.h
w/test/: CMakeLists.txt  boost_test_functions.cpp  test_ComplexSignal.cpp  test_ReferenceFrame.cpp
w/wavpy/test/: Test_model_class.py  Test_noise_wav.py  Test_surface_class.py  Test_waveform_class.py
w/wavpy_Tutorials/: README
w/wavpy_User_manual/: gnss_composite.tex  main.tex  references_nobib.tex  specular_geometry.tex
wawpy/: .gitignore  AUTHORS.md  CMakeLists.txt  README.md  waveform_pylib_config.h.in
wawpy/.gitlab/issue_templates/: Feature proposal.md
wawpy/SIM_2021/: main_clean.cpp
wawpy/SIM_2021/Result/: SurfaceGeneration.cpp  SurfaceGeneration.hpp  SurfacePlot.cpp  global_main.cpp  main_surface_reflection.cpp  plot_semisphere.cpp  plot_semisphere.hpp  script.txt  script2.txt
wawpy/SIM_2021/matplotlib-cpp-master/examples/fft/: FFT.cpp
wawpy/SIM_2021/matplotlib-cpp-master/examples/fft/result/: FFT_v2.cpp  script.txt
wawpy/boostpython/: CMakeLists.txt  ctor2_boostpython.cpp
wawpy/boostpython/inc/: ndarray_gsl.hpp
wawpy/docker/: install-packages-ubuntu-20.04.sh  requirements.txt
wawpy/docs/: CMakeLists.txt  references.bib
wawpy/examples/: CMakeLists.txt  GenerateGoldRTR_dataset.cc  GenerateSPIR_dataset_CR_GPS_L1.cc  ProcessLongIntegration.cc  ProcessSPIR_altimetry.cc  example_wavcomplex_class.cc  example_waveform_class.cc
wawpy/examples/inc/: waveform_structures.h
wawpy/examples/recipes_cpp/: nr3.h
wawpy/octave_prototypes/: makefile_soscf_extSurf  testsurf.f90
wawpy/prova/: check_Mallorca.cpp  check_Mallorca_CR.cpp  check_Mallorca_ddm.cpp  check_Mallorca_peak.cpp  check_Mallorca_waveforms.cpp  phasenoiseanalysis.cpp  prova_ComplexSignal.cpp  prova_ComplexWaveform.cpp  prova_bibaspirfile.cpp
wawpy/src/: Antenna.cpp  ComplexWaveform.cpp  DDM.cpp  Geometry.cpp  Plots.cpp  RawData.cpp  ReferenceFrame.cpp  SourceType.cpp
wawpy/src/inc/: Antenna.hpp  BIBASPIRfile.hpp  ComplexSignal.hpp  DDM.hpp  Geometry.hpp  Observable.hpp  ObservableProcessor.hpp  ReferenceFrame.hpp  Scenario.hpp
wawpy/src_old/: CMakeLists.txt  MainPage.cc  MultiRaySingleRefl_model.cc  waveform_complex.cc  waveform_power.cc
wawpy/src_old/data_share/: GLOBAL_VARIABLES_INT  GPS_L1_PRN03.txt  GPS_L1_PRN04.txt  GPS_L1_PRN05.txt  GPS_L1_PRN06.txt  GPS_L1_PRN07.txt  GPS_L1_PRN08.txt  GPS_L1_PRN09.txt  GPS_L1_PRN10.txt  GPS_L1_PRN12.txt  GPS_L1_PRN15.txt  GPS_L1_PRN18.txt  GPS_L1_PRN19.txt  GPS_L1_PRN21.txt  GPS_L1_PRN22.txt  GPS_L1_PRN24.txt  GPS_L1_PRN25.txt  GPS_L1_PRN28.txt  GPS_L1_PRN31.txt  R_TINS  R_TXYZ_KM  igs16915.sp3
wawpy/src_old/inc/: MultiRaySingleRefl_model.h  ZavorotnyVoronovichModel.h  ancillary_functions.h  compute_delays_wav.h  reflecting_surface.h  waveform_complex.h  waveform_power.h
wawpy/test/: main.hpp  test_ComplexWaveform.cpp  testexample.cpp
wawpy/wavpy/: .gitignore  Make_command_lines_SWIG  wavpy.i
wawpy/wavpy/test/: Test_geometry_class.py  Test_receiver_class.py  Test_wavcomplex_class.py
wawpy/wavpy_Tutorials/: SPIR_analysis.ipynb  Stare_processing.ipynb  wavpy_tutorial.ipynb
wawpy/wavpy_User_manual/: MultiRaySingleRefl_model.tex  ZavorotnyVoronovichModel.tex  reflecting_surface.tex  rf_front_end.tex  waveform_complex.tex  waveform_power.tex
